documentation and fix swagger finnaly
-more comprehensive documentation
- swagger config fix, now can see in /docs
