# server/src/domain/orm/auth.orm.ts
@@ -3,6 +3,13 @@ import { TRegister, TLogin } from "../../types/auth.types";
 
 const prisma = new PrismaClient();
 
+/**
+ * Registers a new user in the database.
+ *
+ * @param {TRegister} user - The user data to be registered.
+ * @returns {Promise<IUser>} The newly created user.
+ * @throws {Error} If there is an issue creating the user.
+ */
 export const registerUserORM = async (user: TRegister) => {
   try {
     const newUser = await prisma.user.create({
@@ -20,6 +27,13 @@ export const registerUserORM = async (user: TRegister) => {
   }
 };
 
+/**
+ * Authenticates a user by checking their email and password.
+ *
+ * @param {TLogin} user - The login credentials.
+ * @returns {Promise<IUser | null>} The user object if authentication is successful, otherwise null.
+ * @throws {Error} If there is an issue during authentication.
+ */
 export const loginUserORM = async (user: TLogin) => {
   try {
     const foundUser = await prisma.user.findUnique({
@@ -28,12 +42,13 @@ export const loginUserORM = async (user: TLogin) => {
       },
     });
 
+    // If the user is not found or the password does not match, return null.
     if (!foundUser || foundUser.password !== user.password) {
-      return null; 
+      return null;
     }
 
     return foundUser;
   } catch (error) {
-    throw new Error("Error en ORM " + error);
+    throw new Error("Error in ORM " + error);
   }
 };
